--- a/accueil.html
+++ b/accueil.html
@@ -9,7 +9,7 @@
     <!-- Menu général -->
     <nav>
         <ul>
-            <li><a href="accueil.html">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="presentation.html">Présentation</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
