--- a/presentation.html
+++ b/presentation.html
@@ -10,7 +10,7 @@
     <!-- Utilisation de la balise nav pour definir la barre de navigation -->
     <nav>
         <ul>
-            <li><a href="accueil.html">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="presentation.html">Présentation</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
