--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Contenu de la page d'accueil -->
     <h1>Bienvenue sur le site de Football</h1>
     <p>Découvrez le football et laissez-vous emporter par la passion...</p>
-<img src="images/téléchargement.jpeg" alt="">
+<img src="téléchargement.jpeg" alt="loisir football">
     <!-- Pied de page -->
     <footer>
         <p>&copy; 2024 Tous droits réservés - Divin</p>
