--- a/presentation.html
+++ b/presentation.html
@@ -20,7 +20,7 @@
     <h1>Le Football</h1>
     <!-- La balise figure, pour les insersion des figures et des légendes  -->
     <figure>
-        <img src="/images/ballon.jpeg" alt="Ballon de football">
+        <img src="ballon.jpeg" alt="Ballon de football">
          <!-- La balise figcaption permet de titré l'image -->
         <figcaption><i>Cette photo a été télécharger sur <br> https://www.sportscontact.ca/fr/collections/soccer-balls</i></figcaption>
     </figure>
@@ -29,14 +29,14 @@
     
     <h2>Origines et histoire</h2>
     <figure>
-        <img src="/images/image2.jpeg" alt="Origine du football">
+        <img src="image2.jpeg" alt="Origine du football">
         <figcaption><i>Cette photo a été télécharger sur https://fr.wikipedia.org/</i></figcaption>
     </figure>
     <p>Le football moderne tel que nous le connaissons aujourd'hui a ses origines en Angleterre au XIXe siècle, bien que des jeux similaires aient été pratiqués dans de nombreuses cultures à travers l'histoire. Le sport a évolué au fil du temps pour devenir un phénomène mondial, avec des ligues professionnelles dans de nombreux pays et une compétition internationale comme la Coupe du Monde de la FIFA.</p>
     
     <h2>Règles du jeu</h2>
     <figure>
-        <img src="/images/images.jpeg" alt="Regles de football">
+        <img src="images.jpeg" alt="Regles de football">
         <figcaption><i>Cette photo a été télécharger sur https://sportingfutsal.fr</i></figcaption>
     </figure>
     <p>Les règles du football sont relativement simples, mais le jeu demande un mélange unique de compétences physiques, techniques et tactiques. Le but du jeu est de marquer des buts en faisant passer le ballon dans le but adverse, tout en défendant son propre but pour empêcher l'adversaire de marquer.</p>
