--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
     </nav>
 
     <!-- Contenu de la page de contact -->
-    <h1>Contactez-nous</h1>
-    <p>Pour toute question, veuillez nous contacter aux coordonnées suivantes :</p>
+    <h1>Me contacter</h1>
+    <p>Pour toute question, veuillez me contacter aux coordonnées suivantes :</p>
     
     <h2>Coordonnées</h2>
     <p><strong>Email : </strong><a href="mailto:divinagbenohevi@gmail.com">divinagbenohevi@gmail.com</a></p>
